parquet: add decoder test